hash/.svn/pristine/46/4667b3556cdab70f6db5de1d633dd6d490ba0934.svn-base
*** RUNNING PRE-TURNIN TESTS ON 2015-10-06 09:22:48 CDT ***
* Language is Java
ERROR compiling source code:
Main.java:76: error: constructor StringTable in class StringTable cannot be applied to given types;
	StringTable table = new StringTable(patternSeq.length());
	                    ^
  required: no arguments
  found: int
  reason: actual and formal argument lists differ in length
1 error
